--- a/package.json
+++ b/package.json
@@ -1,62 +1,64 @@
 {
   "name": "create-official-website",
-  "version": "1.0.0",
-  "description": "官网多页面模板",
+  "version": "1.1.0",
+  "description": "official website multi-page template",
   "main": "src/main.js",
   "scripts": {
     "start": "webpack-dev-server --config ./config/webpack.dev.js",
-    "dev": "nodemon --watch ./src/routes.js --exec \"npm run start\"",
+    "dev": "nodemon --watch ./src/routes.js --exec \"pnpm run start\"",
     "build": "webpack --config ./config/webpack.prod.js"
   },
   "author": "luy19",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@testerum/ejs-compiled-loader-webpack4-nodeps": "0.0.1",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "exports-loader": "^0.7.0",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.5",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "lint-staged": "^9.4.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^1.19.2",
-    "obsolete-webpack-plugin": "^0.5.6",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "prettier": "1.18.2",
-    "script-ext-html-webpack-plugin": "^2.1.4",
-    "style-loader": "^1.0.0",
-    "stylelint": "^11.1.1",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-webpack-plugin": "^1.0.2",
-    "terser-webpack-plugin": "^1.4.1",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.2"
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-webpack-plugin": "^3.2.0",
+    "exports-loader": "^4.0.0",
+    "expose-loader": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "nodemon": "^2.0.20",
+    "postcss": "^8.4.19",
+    "postcss-less": "^6.0.0",
+    "postcss-loader": "^7.0.1",
+    "prettier": "2.7.1",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.14.1",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-webpack-plugin": "^3.3.0",
+    "template-ejs-loader": "^0.9.4",
+    "terser-webpack-plugin": "^5.3.6",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-obsolete-plugin": "^1.0.2"
   },
   "dependencies": {
-    "core-js": "^3.2.1",
+    "core-js": "^3.26.0",
     "jquery": "^1.12.4",
     "normalize.css": "^8.0.1"
   },
@@ -67,7 +69,7 @@
     }
   },
   "engines": {
-    "npm": ">=6.0.0",
-    "node": ">=10.0.0"
+    "npm": ">=8.0.0",
+    "node": ">=16.0.0"
   }
 }
